adding the Landing page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleLanding.css" />
     <title>Multigram</title>
   </head>
   <body>
-    <h1>Landing Page</h1>
-
+    <h1 class="login">Multigram</h1>
+    <input type="text" id="username" class="login" placeholder="Phone number, username or email"></input>
+    <input type="text" id="password" class="login" placeholder="Password"></input>
     <script src="script.js"></script>
   </body>
 </html>
