--- a/account.html
+++ b/account.html
@@ -8,8 +8,27 @@
     <title>Multigram</title>
   </head>
   <body>
-    <h1>Account Page</h1>
-
+    <div class="head">
+      <h1>joinmultiverse</h1>
+      <hr>
+      <img width="30%" src="https://placehold.co/200">
+      <div class="profile-intro">
+        <span class="username">joinmultiverse</span>
+        <p><b>Multiverse</b></p>
+        <p>Providing profressional outstanding apprenticeships in the UK and US</p>
+      </div>
+    </div>
+    <div class="photos">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+      <img src="https://placehold.co/200">
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
